update Technical Data workbook

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -28,7 +28,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using gpu device 0: GeForce GT 750M\n"
+      "WARNING (theano.sandbox.cuda): CUDA is installed, but device gpu is not available  (error: Unable to get the number of gpus available: CUDA driver version is insufficient for CUDA runtime version)\n",
+      "WARNING:theano.sandbox.cuda:CUDA is installed, but device gpu is not available  (error: Unable to get the number of gpus available: CUDA driver version is insufficient for CUDA runtime version)\n"
      ]
     }
    ],
@@ -109,6 +110,7 @@
      "text": [
       "Compiling:\n",
       "    PublicMarketPremium\n",
+      "    ProFormaPeriodAssetDiscountRate\n",
       "    ProFormaPeriodDiscountRate\n",
       "    StabilizedDiscountRate\n",
       "    Revenue\n",
@@ -142,6 +144,17 @@
       "    TV_EBITMultiple\n",
       "    Val_of_FCF\n",
       "    Val_of_TV\n",
+      "    Unlev_Val\n",
+      "    DERatios\n",
+      "    Debt\n",
+      "    InterestRates\n",
+      "    InterestExpense\n",
+      "    ITS\n",
+      "    ProFormaPeriodITSDiscountRate\n",
+      "    StabilizedITSDiscountRate\n",
+      "    ITS_TV\n",
+      "    Val_of_ITS\n",
+      "    Val_of_ITS_TV\n",
       "    Val\n",
       "done!\n"
      ]
@@ -152,7 +165,8 @@
     "    ValuationModel(\n",
     "        venture_name='TechnicalData',\n",
     "        year_0=YEAR_0,\n",
-    "        nb_pro_forma_years_excl_0=NB_PRO_FORMA_YEARS)"
+    "        nb_pro_forma_years_excl_0=NB_PRO_FORMA_YEARS)#,\n",
+    "        # compile=False)"
    ]
   },
   {
@@ -164,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -212,7 +226,7 @@
        "extra_executive_compensation    2500   75000   140000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,67 +563,67 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Val_of_FCF</th>\n",
-       "      <td>311,766.16</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>311,766.19</td>\n",
+       "      <td>395,943.03</td>\n",
+       "      <td>474,631.38</td>\n",
+       "      <td>328,478.78</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Val_of_TV</th>\n",
-       "      <td>1,913,803.62</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>1,913,804.00</td>\n",
+       "      <td>2,277,426.75</td>\n",
+       "      <td>2,710,138.00</td>\n",
+       "      <td>3,225,064.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Val</th>\n",
-       "      <td>2,225,569.75</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
+       "      <td>2,225,570.25</td>\n",
+       "      <td>2,673,369.75</td>\n",
+       "      <td>3,184,769.50</td>\n",
+       "      <td>3,553,543.25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 Year 0       1981       1982         1983\n",
-       "RiskFreeRate                       0.11                                   \n",
-       "PublicMarketReturn                 0.19                                   \n",
-       "PublicMarketPremium                0.08                                   \n",
-       "                                                                          \n",
-       "ProFormaPeriodBeta                 2.00                                   \n",
-       "ProFormaPeriodDiscountRate         0.27                                   \n",
-       "                                                                          \n",
-       "StabilizedBeta                     1.00                                   \n",
-       "StabilizedDiscountRate             0.19                                   \n",
-       "                                                                          \n",
-       "REVENUE calcs:                                                            \n",
-       "Revenue                            0.00 288,000.00 799,350.00 1,181,700.00\n",
-       "RevenueGrowth                       NaN        inf       1.78         0.48\n",
-       "                                                                          \n",
-       "OPEX calcs:                                                               \n",
-       "OpEx                               0.00 245,274.00 383,991.00   550,010.00\n",
-       "OpExGrowth                          NaN        inf       0.57         0.43\n",
-       "                                                                          \n",
-       "EBIT calcs:                                                               \n",
-       "EBIT                               0.00  42,726.00 415,359.00   631,690.00\n",
-       "EBITMargin                          NaN       0.15       0.52         0.53\n",
-       "EBITGrowth                          NaN        inf       8.72         0.52\n",
-       "                                                                          \n",
-       "EBIAT calcs:                                                              \n",
-       "CorpTaxRate                        0.48                                   \n",
-       "EBIAT                              0.00  22,217.52 215,986.67   328,478.78\n",
-       "                                                                          \n",
-       "FCF & TV calcs:                                                           \n",
-       "FCF                                0.00  22,217.52 215,986.67   328,478.78\n",
-       "LongTermGrowthRate                                                    0.08\n",
-       "TV                                                            3,225,064.50\n",
-       "                                                                          \n",
-       "VALUATION calcs:                                                          \n",
-       "Val_of_FCF                   311,766.16                                   \n",
-       "Val_of_TV                  1,913,803.62                                   \n",
-       "Val                        2,225,569.75                                   "
+       "                                 Year 0         1981         1982         1983\n",
+       "RiskFreeRate                       0.11                                       \n",
+       "PublicMarketReturn                 0.19                                       \n",
+       "PublicMarketPremium                0.08                                       \n",
+       "                                                                              \n",
+       "ProFormaPeriodBeta                 2.00                                       \n",
+       "ProFormaPeriodDiscountRate         0.27                                       \n",
+       "                                                                              \n",
+       "StabilizedBeta                     1.00                                       \n",
+       "StabilizedDiscountRate             0.19                                       \n",
+       "                                                                              \n",
+       "REVENUE calcs:                                                                \n",
+       "Revenue                            0.00   288,000.00   799,350.00 1,181,700.00\n",
+       "RevenueGrowth                       NaN          inf         1.78         0.48\n",
+       "                                                                              \n",
+       "OPEX calcs:                                                                   \n",
+       "OpEx                               0.00   245,274.00   383,991.00   550,010.00\n",
+       "OpExGrowth                          NaN          inf         0.57         0.43\n",
+       "                                                                              \n",
+       "EBIT calcs:                                                                   \n",
+       "EBIT                               0.00    42,726.00   415,359.00   631,690.00\n",
+       "EBITMargin                          NaN         0.15         0.52         0.53\n",
+       "EBITGrowth                          NaN          inf         8.72         0.52\n",
+       "                                                                              \n",
+       "EBIAT calcs:                                                                  \n",
+       "CorpTaxRate                        0.48                                       \n",
+       "EBIAT                              0.00    22,217.52   215,986.67   328,478.78\n",
+       "                                                                              \n",
+       "FCF & TV calcs:                                                               \n",
+       "FCF                                0.00    22,217.52   215,986.67   328,478.78\n",
+       "LongTermGrowthRate                                                        0.08\n",
+       "TV                                                                3,225,064.50\n",
+       "                                                                              \n",
+       "VALUATION calcs:                                                              \n",
+       "Val_of_FCF                   311,766.19   395,943.03   474,631.38   328,478.78\n",
+       "Val_of_TV                  1,913,804.00 2,277,426.75 2,710,138.00 3,225,064.50\n",
+       "Val                        2,225,570.25 2,673,369.75 3,184,769.50 3,553,543.25"
       ]
      },
      "execution_count": 7,
