minor refactoring  for RightNow Technologies workbook

--- a/RightNow Technologies/RightNow Technologies.ipynb
+++ b/RightNow Technologies/RightNow Technologies.ipynb
@@ -245,7 +245,7 @@
     "     'FCF & TV calcs:', 'FCF', 'LongTermGrowthRate',\n",
     "     'TV', 'TV_RevenueMultiple', 'TV_EBITMultiple',\n",
     "     '       ',\n",
-    "     'VALUATION calcs:', 'Val_of_FCF', 'Val_of_TV', 'Val']"
+    "     'VALUATION calcs:', 'Val']"
    ]
   },
   {
