--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -37,7 +37,7 @@
     "from __future__ import print_function\n",
     "import pandas\n",
     "\n",
-    "from CorpFin.Valuation import ValuationModel\n",
+    "from CorpFin.Valuation import UnlevValModel\n",
     "from HelpyFuncs.Print import print_live_in_ipython"
    ]
   },
@@ -109,64 +109,50 @@
      "output_type": "stream",
      "text": [
       "Compiling:\n",
-      "    PublicMarketPremium\n",
-      "    ProFormaPeriodAssetDiscountRate\n",
-      "    ProFormaPeriodDiscountRate\n",
-      "    StabilizedDiscountRate\n",
-      "    Revenue\n",
-      "    RevenueChange\n",
-      "    RevenueGrowth\n",
-      "    OpEx\n",
-      "    OpEx_over_Revenue\n",
-      "    OpExGrowth\n",
-      "    EBIT\n",
-      "    EBITMargin\n",
-      "    EBITGrowth\n",
-      "    EBIAT\n",
-      "    FA\n",
-      "    FA_over_Revenue\n",
-      "    FAGrowth\n",
-      "    Depreciation\n",
-      "    Depreciation_over_prevFA\n",
-      "    CapEx\n",
-      "    CapEx_over_Revenue\n",
-      "    CapEx_over_RevenueChange\n",
-      "    CapExGrowth\n",
-      "    NWC\n",
-      "    NWC_over_Revenue\n",
-      "    NWCGrowth\n",
-      "    NWCChange\n",
-      "    NWCChange_over_Revenue\n",
-      "    NWCChange_over_RevenueChange\n",
-      "    FCF\n",
-      "    TV\n",
-      "    TV_RevenueMultiple\n",
-      "    TV_EBITMultiple\n",
-      "    Val_of_FCF\n",
-      "    Val_of_TV\n",
-      "    Unlev_Val\n",
-      "    DERatios\n",
-      "    Debt\n",
-      "    InterestRates\n",
-      "    InterestExpense\n",
-      "    ITS\n",
-      "    ProFormaPeriodITSDiscountRate\n",
-      "    StabilizedITSDiscountRate\n",
-      "    ITS_TV\n",
-      "    Val_of_ITS\n",
-      "    Val_of_ITS_TV\n",
-      "    Val\n",
-      "done!\n"
+      "    PublicMarketPremium... done after 0:00:00 (0:00:00 so far)\n",
+      "    ProFormaPeriodAssetDiscountRate... done after 0:00:00 (0:00:00 so far)\n",
+      "    ProFormaPeriodDiscountRate... done after 0:00:00 (0:00:00 so far)\n",
+      "    StabilizedDiscountRate... done after 0:00:00 (0:00:00 so far)\n",
+      "    Revenue... done after 0:00:00 (0:00:00 so far)\n",
+      "    RevenueChange... done after 0:00:00 (0:00:00 so far)\n",
+      "    RevenueGrowth... done after 0:00:00 (0:00:00 so far)\n",
+      "    OpEx... done after 0:00:00 (0:00:00 so far)\n",
+      "    OpEx_over_Revenue... done after 0:00:00 (0:00:00 so far)\n",
+      "    OpExGrowth... done after 0:00:00 (0:00:00 so far)\n",
+      "    EBIT... done after 0:00:00 (0:00:00 so far)\n",
+      "    EBITMargin... done after 0:00:00 (0:00:00 so far)\n",
+      "    EBITGrowth... done after 0:00:00 (0:00:01 so far)\n",
+      "    EBIAT... done after 0:00:00 (0:00:01 so far)\n",
+      "    FA... done after 0:00:00 (0:00:01 so far)\n",
+      "    FA_over_Revenue... done after 0:00:00 (0:00:01 so far)\n",
+      "    FAGrowth... done after 0:00:00 (0:00:01 so far)\n",
+      "    Depreciation... done after 0:00:00 (0:00:01 so far)\n",
+      "    Depreciation_over_prevFA... done after 0:00:00 (0:00:01 so far)\n",
+      "    CapEx... done after 0:00:00 (0:00:02 so far)\n",
+      "    CapEx_over_Revenue... done after 0:00:00 (0:00:02 so far)\n",
+      "    CapEx_over_RevenueChange... done after 0:00:00 (0:00:02 so far)\n",
+      "    CapExGrowth... done after 0:00:00 (0:00:03 so far)\n",
+      "    NWC... done after 0:00:00 (0:00:03 so far)\n",
+      "    NWC_over_Revenue... done after 0:00:00 (0:00:03 so far)\n",
+      "    NWCGrowth... done after 0:00:00 (0:00:03 so far)\n",
+      "    NWCChange... done after 0:00:00 (0:00:03 so far)\n",
+      "    NWCChange_over_Revenue... done after 0:00:00 (0:00:04 so far)\n",
+      "    NWCChange_over_RevenueChange... done after 0:00:00 (0:00:04 so far)\n",
+      "    FCF... done after 0:00:00 (0:00:05 so far)\n",
+      "    TV... done after 0:00:00 (0:00:05 so far)\n",
+      "    TV_RevenueMultiple... done after 0:00:00 (0:00:06 so far)\n",
+      "    TV_EBITMultiple... done after 0:00:00 (0:00:06 so far)\n",
+      "    Unlev_Val... done after 0:00:04 (0:00:10 so far)\n",
+      "done after 0:00:10\n"
      ]
     }
    ],
    "source": [
     "model = \\\n",
-    "    ValuationModel(\n",
+    "    UnlevValModel(\n",
     "        venture_name='TechnicalData',\n",
     "        year_0=YEAR_0,\n",
-    "        nb_pro_forma_years_excl_0=NB_PRO_FORMA_YEARS)#,\n",
-    "        # compile=False)"
+    "        nb_pro_forma_years_excl_0=NB_PRO_FORMA_YEARS)"
    ]
   },
   {
@@ -274,7 +260,7 @@
     "     '       ',\n",
     "     'FCF & TV calcs:', 'FCF', 'LongTermGrowthRate', 'TV',\n",
     "     '        ',\n",
-    "     'VALUATION calcs:', 'Val_of_FCF', 'Val_of_TV', 'Val']"
+    "     'VALUATION calcs:', 'Unlev_Val']"
    ]
   },
   {
@@ -309,9 +295,7 @@
       "    EBIAT\n",
       "    FCF\n",
       "    TV\n",
-      "    Val_of_FCF\n",
-      "    Val_of_TV\n",
-      "    Val\n",
+      "    Unlev_Val\n",
       "done!\n"
      ]
     },
@@ -562,23 +546,9 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Val_of_FCF</th>\n",
-       "      <td>311,766.19</td>\n",
-       "      <td>395,943.03</td>\n",
-       "      <td>474,631.38</td>\n",
-       "      <td>328,478.78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Val_of_TV</th>\n",
-       "      <td>1,913,804.00</td>\n",
-       "      <td>2,277,426.75</td>\n",
-       "      <td>2,710,138.00</td>\n",
-       "      <td>3,225,064.50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Val</th>\n",
+       "      <th>Unlev_Val</th>\n",
        "      <td>2,225,570.25</td>\n",
-       "      <td>2,673,369.75</td>\n",
+       "      <td>2,673,370.00</td>\n",
        "      <td>3,184,769.50</td>\n",
        "      <td>3,553,543.25</td>\n",
        "    </tr>\n",
@@ -621,9 +591,7 @@
        "TV                                                                3,225,064.50\n",
        "                                                                              \n",
        "VALUATION calcs:                                                              \n",
-       "Val_of_FCF                   311,766.19   395,943.03   474,631.38   328,478.78\n",
-       "Val_of_TV                  1,913,804.00 2,277,426.75 2,710,138.00 3,225,064.50\n",
-       "Val                        2,225,570.25 2,673,369.75 3,184,769.50 3,553,543.25"
+       "Unlev_Val                  2,225,570.25 2,673,370.00 3,184,769.50 3,553,543.25"
       ]
      },
      "execution_count": 7,
