--- a/RightNow Technologies/RightNow Technologies.ipynb
+++ b/RightNow Technologies/RightNow Technologies.ipynb
@@ -28,7 +28,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using gpu device 0: GeForce GT 750M\n"
+      "WARNING (theano.sandbox.cuda): CUDA is installed, but device gpu is not available  (error: Unable to get the number of gpus available: CUDA driver version is insufficient for CUDA runtime version)\n",
+      "WARNING:theano.sandbox.cuda:CUDA is installed, but device gpu is not available  (error: Unable to get the number of gpus available: CUDA driver version is insufficient for CUDA runtime version)\n"
      ]
     }
    ],
@@ -37,7 +38,7 @@
     "import numpy\n",
     "import pandas\n",
     "\n",
-    "from CorpFin.Valuation import ValuationModel\n",
+    "from CorpFin.Valuation import UnlevValModel\n",
     "from HelpyFuncs.Print import print_live_in_ipython"
    ]
   },
@@ -112,48 +113,47 @@
      "output_type": "stream",
      "text": [
       "Compiling:\n",
-      "    PublicMarketPremium\n",
-      "    ProFormaPeriodDiscountRate\n",
-      "    StabilizedDiscountRate\n",
-      "    Revenue\n",
-      "    RevenueChange\n",
-      "    RevenueGrowth\n",
-      "    OpEx\n",
-      "    OpEx_over_Revenue\n",
-      "    OpExGrowth\n",
-      "    EBIT\n",
-      "    EBITMargin\n",
-      "    EBITGrowth\n",
-      "    EBIAT\n",
-      "    FA\n",
-      "    FA_over_Revenue\n",
-      "    FAGrowth\n",
-      "    Depreciation\n",
-      "    Depreciation_over_prevFA\n",
-      "    CapEx\n",
-      "    CapEx_over_Revenue\n",
-      "    CapEx_over_RevenueChange\n",
-      "    CapExGrowth\n",
-      "    NWC\n",
-      "    NWC_over_Revenue\n",
-      "    NWCGrowth\n",
-      "    NWCChange\n",
-      "    NWCChange_over_Revenue\n",
-      "    NWCChange_over_RevenueChange\n",
-      "    FCF\n",
-      "    TV\n",
-      "    TV_RevenueMultiple\n",
-      "    TV_EBITMultiple\n",
-      "    Val_of_FCF\n",
-      "    Val_of_TV\n",
-      "    Val\n",
-      "done!\n"
+      "    PublicMarketPremium... done after 0:00:00 (0:00:00 so far)\n",
+      "    ProFormaPeriodAssetDiscountRate... done after 0:00:00 (0:00:00 so far)\n",
+      "    ProFormaPeriodDiscountRate... done after 0:00:00 (0:00:00 so far)\n",
+      "    StabilizedDiscountRate... done after 0:00:00 (0:00:00 so far)\n",
+      "    Revenue... done after 0:00:00 (0:00:00 so far)\n",
+      "    RevenueChange... done after 0:00:00 (0:00:01 so far)\n",
+      "    RevenueGrowth... done after 0:00:01 (0:00:02 so far)\n",
+      "    OpEx... done after 0:00:00 (0:00:03 so far)\n",
+      "    OpEx_over_Revenue... done after 0:00:00 (0:00:04 so far)\n",
+      "    OpExGrowth... done after 0:00:00 (0:00:04 so far)\n",
+      "    EBIT... done after 0:00:01 (0:00:05 so far)\n",
+      "    EBITMargin... done after 0:00:01 (0:00:07 so far)\n",
+      "    EBITGrowth... done after 0:00:01 (0:00:08 so far)\n",
+      "    EBIAT... done after 0:00:02 (0:00:10 so far)\n",
+      "    FA... done after 0:00:02 (0:00:12 so far)\n",
+      "    FA_over_Revenue... done after 0:00:01 (0:00:14 so far)\n",
+      "    FAGrowth... done after 0:00:03 (0:00:17 so far)\n",
+      "    Depreciation... done after 0:00:01 (0:00:19 so far)\n",
+      "    Depreciation_over_prevFA... done after 0:00:03 (0:00:22 so far)\n",
+      "    CapEx... done after 0:00:26 (0:00:49 so far)\n",
+      "    CapEx_over_Revenue... done after 0:00:27 (0:01:16 so far)\n",
+      "    CapEx_over_RevenueChange... done after 0:00:25 (0:01:42 so far)\n",
+      "    CapExGrowth... done after 0:01:02 (0:02:44 so far)\n",
+      "    NWC... done after 0:00:01 (0:02:46 so far)\n",
+      "    NWC_over_Revenue... done after 0:00:01 (0:02:48 so far)\n",
+      "    NWCGrowth... done after 0:00:03 (0:02:51 so far)\n",
+      "    NWCChange... done after 0:00:03 (0:02:54 so far)\n",
+      "    NWCChange_over_Revenue... done after 0:00:06 (0:03:01 so far)\n",
+      "    NWCChange_over_RevenueChange... done after 0:00:03 (0:03:04 so far)\n",
+      "    FCF... done after 0:00:36 (0:03:41 so far)\n",
+      "    TV... done after 0:00:09 (0:03:51 so far)\n",
+      "    TV_RevenueMultiple... done after 0:00:14 (0:04:05 so far)\n",
+      "    TV_EBITMultiple... done after 0:00:09 (0:04:14 so far)\n",
+      "    Unlev_Val... done after 0:03:30 (0:07:44 so far)\n",
+      "done after 0:07:44\n"
      ]
     }
    ],
    "source": [
     "model = \\\n",
-    "    ValuationModel(\n",
+    "    UnlevValModel(\n",
     "        venture_name='RightNowTechnologies',\n",
     "        year_0=YEAR_0,\n",
     "        nb_pro_forma_years_excl_0=NB_PRO_FORMA_YEARS)"
@@ -245,7 +245,7 @@
     "     'FCF & TV calcs:', 'FCF', 'LongTermGrowthRate',\n",
     "     'TV', 'TV_RevenueMultiple', 'TV_EBITMultiple',\n",
     "     '       ',\n",
-    "     'VALUATION calcs:', 'Val']"
+    "     'VALUATION calcs:', 'Unlev_Val']"
    ]
   },
   {
@@ -285,9 +285,7 @@
       "    TV\n",
       "    TV_RevenueMultiple\n",
       "    TV_EBITMultiple\n",
-      "    Val_of_FCF\n",
-      "    Val_of_TV\n",
-      "    Val\n",
+      "    Unlev_Val\n",
       "done!\n"
      ]
     },
@@ -860,39 +858,7 @@
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Val_of_FCF</th>\n",
-       "      <td>158.772</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Val_of_TV</th>\n",
-       "      <td>58.476</td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "      <td></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Val</th>\n",
+       "      <th>Unlev_Val</th>\n",
        "      <td>217.248</td>\n",
        "      <td></td>\n",
        "      <td></td>\n",
@@ -947,9 +913,7 @@
        "TV_EBITMultiple                                                                \n",
        "                                                                               \n",
        "VALUATION calcs:                                                               \n",
-       "Val_of_FCF                  158.772                                            \n",
-       "Val_of_TV                    58.476                                            \n",
-       "Val                         217.248                                            \n",
+       "Unlev_Val                   217.248                                            \n",
        "\n",
        "                                2009     2010     2011     2012     2013  \\\n",
        "ProFormaPeriodDiscountRate                                                 \n",
@@ -986,9 +950,7 @@
        "TV_EBITMultiple                                                            \n",
        "                                                                           \n",
        "VALUATION calcs:                                                           \n",
-       "Val_of_FCF                                                                 \n",
-       "Val_of_TV                                                                  \n",
-       "Val                                                                        \n",
+       "Unlev_Val                                                                  \n",
        "\n",
        "                                2014     2015  \n",
        "ProFormaPeriodDiscountRate                     \n",
@@ -1025,9 +987,7 @@
        "TV_EBITMultiple                         6.505  \n",
        "                                               \n",
        "VALUATION calcs:                               \n",
-       "Val_of_FCF                                     \n",
-       "Val_of_TV                                      \n",
-       "Val                                            "
+       "Unlev_Val                                      "
       ]
      },
      "execution_count": 7,
