update Technical Data workbook

--- a/Technical Data/Technical Data.ipynb
+++ b/Technical Data/Technical Data.ipynb
@@ -121,7 +121,7 @@
       "    OpExGrowth... done after 0:00:00 (0:00:00 so far)\n",
       "    EBIT... done after 0:00:00 (0:00:00 so far)\n",
       "    EBITMargin... done after 0:00:00 (0:00:00 so far)\n",
-      "    EBITGrowth... done after 0:00:00 (0:00:01 so far)\n",
+      "    EBITGrowth... done after 0:00:00 (0:00:00 so far)\n",
       "    EBIAT... done after 0:00:00 (0:00:01 so far)\n",
       "    FA... done after 0:00:00 (0:00:01 so far)\n",
       "    FA_over_Revenue... done after 0:00:00 (0:00:01 so far)\n",
@@ -135,15 +135,15 @@
       "    NWC... done after 0:00:00 (0:00:03 so far)\n",
       "    NWC_over_Revenue... done after 0:00:00 (0:00:03 so far)\n",
       "    NWCGrowth... done after 0:00:00 (0:00:03 so far)\n",
-      "    NWCChange... done after 0:00:00 (0:00:03 so far)\n",
+      "    NWCChange... done after 0:00:00 (0:00:04 so far)\n",
       "    NWCChange_over_Revenue... done after 0:00:00 (0:00:04 so far)\n",
       "    NWCChange_over_RevenueChange... done after 0:00:00 (0:00:04 so far)\n",
       "    FCF... done after 0:00:00 (0:00:05 so far)\n",
       "    TV... done after 0:00:00 (0:00:05 so far)\n",
       "    TV_RevenueMultiple... done after 0:00:00 (0:00:06 so far)\n",
       "    TV_EBITMultiple... done after 0:00:00 (0:00:06 so far)\n",
-      "    Unlev_Val... done after 0:00:04 (0:00:10 so far)\n",
-      "done after 0:00:10\n"
+      "    Unlev_Val... done after 0:00:01 (0:00:07 so far)\n",
+      "done after 0:00:07\n"
      ]
     }
    ],
@@ -548,50 +548,50 @@
        "    <tr>\n",
        "      <th>Unlev_Val</th>\n",
        "      <td>2,225,570.25</td>\n",
-       "      <td>2,673,370.00</td>\n",
-       "      <td>3,184,769.50</td>\n",
-       "      <td>3,553,543.25</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                 Year 0         1981         1982         1983\n",
-       "RiskFreeRate                       0.11                                       \n",
-       "PublicMarketReturn                 0.19                                       \n",
-       "PublicMarketPremium                0.08                                       \n",
-       "                                                                              \n",
-       "ProFormaPeriodBeta                 2.00                                       \n",
-       "ProFormaPeriodDiscountRate         0.27                                       \n",
-       "                                                                              \n",
-       "StabilizedBeta                     1.00                                       \n",
-       "StabilizedDiscountRate             0.19                                       \n",
-       "                                                                              \n",
-       "REVENUE calcs:                                                                \n",
-       "Revenue                            0.00   288,000.00   799,350.00 1,181,700.00\n",
-       "RevenueGrowth                       NaN          inf         1.78         0.48\n",
-       "                                                                              \n",
-       "OPEX calcs:                                                                   \n",
-       "OpEx                               0.00   245,274.00   383,991.00   550,010.00\n",
-       "OpExGrowth                          NaN          inf         0.57         0.43\n",
-       "                                                                              \n",
-       "EBIT calcs:                                                                   \n",
-       "EBIT                               0.00    42,726.00   415,359.00   631,690.00\n",
-       "EBITMargin                          NaN         0.15         0.52         0.53\n",
-       "EBITGrowth                          NaN          inf         8.72         0.52\n",
-       "                                                                              \n",
-       "EBIAT calcs:                                                                  \n",
-       "CorpTaxRate                        0.48                                       \n",
-       "EBIAT                              0.00    22,217.52   215,986.67   328,478.78\n",
-       "                                                                              \n",
-       "FCF & TV calcs:                                                               \n",
-       "FCF                                0.00    22,217.52   215,986.67   328,478.78\n",
-       "LongTermGrowthRate                                                        0.08\n",
-       "TV                                                                3,225,064.50\n",
-       "                                                                              \n",
-       "VALUATION calcs:                                                              \n",
-       "Unlev_Val                  2,225,570.25 2,673,370.00 3,184,769.50 3,553,543.25"
+       "                                 Year 0       1981       1982         1983\n",
+       "RiskFreeRate                       0.11                                   \n",
+       "PublicMarketReturn                 0.19                                   \n",
+       "PublicMarketPremium                0.08                                   \n",
+       "                                                                          \n",
+       "ProFormaPeriodBeta                 2.00                                   \n",
+       "ProFormaPeriodDiscountRate         0.27                                   \n",
+       "                                                                          \n",
+       "StabilizedBeta                     1.00                                   \n",
+       "StabilizedDiscountRate             0.19                                   \n",
+       "                                                                          \n",
+       "REVENUE calcs:                                                            \n",
+       "Revenue                            0.00 288,000.00 799,350.00 1,181,700.00\n",
+       "RevenueGrowth                       NaN        inf       1.78         0.48\n",
+       "                                                                          \n",
+       "OPEX calcs:                                                               \n",
+       "OpEx                               0.00 245,274.00 383,991.00   550,010.00\n",
+       "OpExGrowth                          NaN        inf       0.57         0.43\n",
+       "                                                                          \n",
+       "EBIT calcs:                                                               \n",
+       "EBIT                               0.00  42,726.00 415,359.00   631,690.00\n",
+       "EBITMargin                          NaN       0.15       0.52         0.53\n",
+       "EBITGrowth                          NaN        inf       8.72         0.52\n",
+       "                                                                          \n",
+       "EBIAT calcs:                                                              \n",
+       "CorpTaxRate                        0.48                                   \n",
+       "EBIAT                              0.00  22,217.52 215,986.67   328,478.78\n",
+       "                                                                          \n",
+       "FCF & TV calcs:                                                           \n",
+       "FCF                                0.00  22,217.52 215,986.67   328,478.78\n",
+       "LongTermGrowthRate                                                    0.08\n",
+       "TV                                                            3,225,064.50\n",
+       "                                                                          \n",
+       "VALUATION calcs:                                                          \n",
+       "Unlev_Val                  2,225,570.25                                   "
       ]
      },
      "execution_count": 7,
