add TixToGo payoff scenarios

--- a/TixToGo/TixToGo.ipynb
+++ b/TixToGo/TixToGo.ipynb
@@ -218,36 +218,36 @@
       "    OpEx... done after 0:00:00 (0:00:01 so far)\n",
       "    OpEx_over_Revenue... done after 0:00:00 (0:00:01 so far)\n",
       "    OpExGrowth... done after 0:00:00 (0:00:01 so far)\n",
-      "    EBIT... done after 0:00:00 (0:00:02 so far)\n",
+      "    EBIT... done after 0:00:00 (0:00:01 so far)\n",
       "    EBITMargin... done after 0:00:00 (0:00:02 so far)\n",
-      "    EBITGrowth... done after 0:00:00 (0:00:03 so far)\n",
-      "    TaxLoss... done after 0:00:00 (0:00:04 so far)\n",
-      "    TaxableEBIT... done after 0:00:00 (0:00:04 so far)\n",
-      "    EBIAT... done after 0:00:00 (0:00:05 so far)\n",
-      "    FA... done after 0:00:00 (0:00:05 so far)\n",
+      "    EBITGrowth... done after 0:00:00 (0:00:02 so far)\n",
+      "    TaxLoss... done after 0:00:00 (0:00:03 so far)\n",
+      "    TaxableEBIT... done after 0:00:00 (0:00:03 so far)\n",
+      "    EBIAT... done after 0:00:00 (0:00:04 so far)\n",
+      "    FA... done after 0:00:00 (0:00:04 so far)\n",
       "    FA_over_Revenue... done after 0:00:00 (0:00:05 so far)\n",
-      "    FAGrowth... done after 0:00:00 (0:00:06 so far)\n",
-      "    Depreciation... done after 0:00:00 (0:00:07 so far)\n",
-      "    Depreciation_over_prevFA... done after 0:00:00 (0:00:08 so far)\n",
-      "    CapEx... done after 0:00:01 (0:00:09 so far)\n",
-      "    CapEx_over_Revenue... done after 0:00:01 (0:00:10 so far)\n",
-      "    CapEx_over_RevenueChange... done after 0:00:01 (0:00:11 so far)\n",
-      "    CapExGrowth... done after 0:00:07 (0:00:19 so far)\n",
-      "    NWC... done after 0:00:00 (0:00:19 so far)\n",
-      "    NWC_over_Revenue... done after 0:00:00 (0:00:20 so far)\n",
-      "    NWCGrowth... done after 0:00:01 (0:00:21 so far)\n",
-      "    NWCChange... done after 0:00:00 (0:00:22 so far)\n",
-      "    NWCChange_over_Revenue... done after 0:00:00 (0:00:22 so far)\n",
-      "    NWCChange_over_RevenueChange... done after 0:00:00 (0:00:23 so far)\n",
-      "    FCF... done after 0:00:03 (0:00:26 so far)\n",
-      "    StabilizedDiscountRate... done after 0:00:00 (0:00:26 so far)\n",
-      "    TV... done after 0:00:01 (0:00:27 so far)\n",
-      "    TV_RevenueMultiple... done after 0:00:01 (0:00:28 so far)\n",
-      "    TV_EBITMultiple... done after 0:00:01 (0:00:29 so far)\n",
-      "    ProFormaPeriodAssetDiscountRate... done after 0:00:00 (0:00:29 so far)\n",
-      "    ProFormaPeriodDiscountRate... done after 0:00:00 (0:00:29 so far)\n",
-      "    Unlev_Val... done after 0:00:24 (0:00:54 so far)\n",
-      "done after 0:00:54\n"
+      "    FAGrowth... done after 0:00:00 (0:00:05 so far)\n",
+      "    Depreciation... done after 0:00:00 (0:00:06 so far)\n",
+      "    Depreciation_over_prevFA... done after 0:00:00 (0:00:06 so far)\n",
+      "    CapEx... done after 0:00:01 (0:00:08 so far)\n",
+      "    CapEx_over_Revenue... done after 0:00:01 (0:00:09 so far)\n",
+      "    CapEx_over_RevenueChange... done after 0:00:01 (0:00:10 so far)\n",
+      "    CapExGrowth... done after 0:00:06 (0:00:17 so far)\n",
+      "    NWC... done after 0:00:00 (0:00:17 so far)\n",
+      "    NWC_over_Revenue... done after 0:00:00 (0:00:17 so far)\n",
+      "    NWCGrowth... done after 0:00:00 (0:00:18 so far)\n",
+      "    NWCChange... done after 0:00:00 (0:00:19 so far)\n",
+      "    NWCChange_over_Revenue... done after 0:00:00 (0:00:19 so far)\n",
+      "    NWCChange_over_RevenueChange... done after 0:00:00 (0:00:20 so far)\n",
+      "    FCF... done after 0:00:02 (0:00:22 so far)\n",
+      "    StabilizedDiscountRate... done after 0:00:00 (0:00:22 so far)\n",
+      "    TV... done after 0:00:00 (0:00:23 so far)\n",
+      "    TV_RevenueMultiple... done after 0:00:00 (0:00:24 so far)\n",
+      "    TV_EBITMultiple... done after 0:00:00 (0:00:25 so far)\n",
+      "    ProFormaPeriodAssetDiscountRate... done after 0:00:00 (0:00:25 so far)\n",
+      "    ProFormaPeriodDiscountRate... done after 0:00:00 (0:00:25 so far)\n",
+      "    Unlev_Val... done after 0:00:21 (0:00:46 so far)\n",
+      "done after 0:00:46\n"
      ]
     }
    ],
@@ -1379,6 +1379,37 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "ENTERPRISE VAL =  $35.00 MM\n",
+      "Founders            5.77\n",
+      "Series B Holders    8.00\n",
+      "Series C Holders   21.23\n",
+      "dtype: float64\n",
+      "\n",
+      "DETAILS:\n",
+      "                  Owner                      Security   Val  Share\n",
+      "0              Founders                        Common  5.77   0.48\n",
+      "1      Series C Holders  Series C Partg Pref: 1st Dip 15.00    nan\n",
+      "2      Series C Holders                        Common  6.23   0.52\n",
+      "3      Series B Holders            Series B Conv Pref  8.00    nan\n",
+      "TOTAL                                                 35.00   1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_payoffs(35e6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "ENTERPRISE VAL =  $40.00 MM\n",
       "Founders            8.17\n",
       "Series B Holders    8.00\n",
@@ -1401,7 +1432,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ENTERPRISE VAL =  $45.00 MM\n",
+      "Founders           10.42\n",
+      "Series B Holders    8.33\n",
+      "Series C Holders   26.25\n",
+      "dtype: float64\n",
+      "\n",
+      "DETAILS:\n",
+      "                  Owner                      Security   Val  Share\n",
+      "0              Founders                        Common 10.42   0.35\n",
+      "1      Series C Holders  Series C Partg Pref: 1st Dip 15.00    nan\n",
+      "2      Series C Holders                        Common 11.25   0.38\n",
+      "3      Series B Holders                        Common  8.33   0.28\n",
+      "TOTAL                                                 45.00   1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_payoffs(45e6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -1432,7 +1494,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ENTERPRISE VAL =  $55.00 MM\n",
+      "Founders           13.89\n",
+      "Series B Holders   11.11\n",
+      "Series C Holders   30.00\n",
+      "dtype: float64\n",
+      "\n",
+      "DETAILS:\n",
+      "                  Owner                      Security   Val  Share\n",
+      "0              Founders                        Common 13.89   0.35\n",
+      "1      Series C Holders  Series C Partg Pref: 1st Dip 15.00    nan\n",
+      "2      Series C Holders                        Common 15.00   0.38\n",
+      "3      Series B Holders                        Common 11.11   0.28\n",
+      "TOTAL                                                 55.00   1.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "show_payoffs(55e6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
